// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Docker launcher parity for runs without services > launches, observes, finishes and removes with the same commands 1`] = `
[
  {
    "args": [
      "info",
      "--format",
      "{{json .}}",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "network",
      "create",
      "--driver",
      "bridge",
      "--internal",
      "--ipv6=false",
      "--opt",
      "com.docker.network.bridge.gateway_mode_ipv4=isolated",
      "--opt",
      "com.docker.network.bridge.gateway_mode_ipv6=isolated",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.run-id=docker-parity",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "wardby-net-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "inspect",
      "wardby-net-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "volume",
      "create",
      "--driver",
      "local",
      "--opt",
      "type=tmpfs",
      "--opt",
      "device=tmpfs",
      "--opt",
      "o=size=512m,nr_inodes=131072,uid=10001,gid=10001,mode=0700,nosuid,nodev",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.run-id=docker-parity",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "wardby-storage-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "volume",
      "inspect",
      "wardby-storage-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "create",
      "--name",
      "wardby-keeper-04e797cd228348f416c2",
      "--pull",
      "never",
      "--user",
      "10001:10001",
      "--network",
      "none",
      "--read-only",
      "--cap-drop",
      "ALL",
      "--security-opt",
      "no-new-privileges=true",
      "--security-opt",
      "seccomp=builtin",
      "--cgroupns",
      "private",
      "--ipc",
      "none",
      "--cpus",
      "0.25",
      "--memory",
      "640m",
      "--memory-swap",
      "640m",
      "--memory-swappiness",
      "0",
      "--pids-limit",
      "32",
      "--restart",
      "no",
      "--log-driver",
      "local",
      "--log-opt",
      "max-size=1m",
      "--log-opt",
      "max-file=2",
      "--mount",
      "type=volume,src=wardby-storage-04e797cd228348f416c2,dst=/run/wardby/storage,volume-nocopy",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--entrypoint",
      "node",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.run-id=docker-parity",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "/opt/wardby/coding-worker/keeper.js",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-keeper-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "start",
      "wardby-keeper-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "logs",
      "--tail",
      "8",
      "wardby-keeper-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "connect",
      "--alias",
      "wardby-proxy",
      "wardby-net-04e797cd228348f416c2",
      "trusted-proxy",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "trusted-proxy",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "create",
      "--name",
      "wardby-worker-04e797cd228348f416c2",
      "--pull",
      "never",
      "--user",
      "10001:10001",
      "--network",
      "wardby-net-04e797cd228348f416c2",
      "--read-only",
      "--cap-drop",
      "ALL",
      "--security-opt",
      "no-new-privileges=true",
      "--security-opt",
      "seccomp=builtin",
      "--init",
      "--cgroupns",
      "private",
      "--ipc",
      "none",
      "--cpus",
      "1.5",
      "--memory",
      "1024m",
      "--memory-swap",
      "1024m",
      "--memory-swappiness",
      "0",
      "--pids-limit",
      "64",
      "--shm-size",
      "16m",
      "--tmpfs",
      "/tmp:rw,noexec,nosuid,nodev,size=64m,mode=1777",
      "--tmpfs",
      "/home/wardby:rw,noexec,nosuid,nodev,size=64m,uid=10001,gid=10001,mode=0700",
      "--mount",
      "type=volume,src=wardby-storage-04e797cd228348f416c2,dst=/workspace,volume-subpath=workspace,volume-nocopy",
      "--mount",
      "type=volume,src=wardby-storage-04e797cd228348f416c2,dst=/run/wardby/input,volume-subpath=input,volume-nocopy,readonly",
      "--mount",
      "type=volume,src=wardby-storage-04e797cd228348f416c2,dst=/run/wardby/output,volume-subpath=output,volume-nocopy",
      "--env",
      "WARDBY_PROXY_URL=http://wardby-proxy:8787",
      "--env",
      "WARDBY_RUN_CAPABILITY",
      "--restart",
      "no",
      "--stop-signal",
      "SIGTERM",
      "--stop-timeout",
      "10",
      "--log-driver",
      "local",
      "--log-opt",
      "max-size=1m",
      "--log-opt",
      "max-file=2",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=04e797cd228348f416c216ca2de21fe077e57e0588ee4c53a182b2492839cf77",
      "--label",
      "io.wardby.run-id=docker-parity",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    ],
    "options": {
      "env": {
        "WARDBY_RUN_CAPABILITY": "rrp_0123456789abcdef",
      },
    },
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-worker-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "start",
      "wardby-worker-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-worker-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-worker-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-worker-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "rm",
      "--force",
      "wardby-worker-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "disconnect",
      "wardby-net-04e797cd228348f416c2",
      "trusted-proxy",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-keeper-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "rm",
      "--force",
      "wardby-keeper-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "inspect",
      "wardby-net-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "network",
      "rm",
      "wardby-net-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
  {
    "args": [
      "volume",
      "inspect",
      "wardby-storage-04e797cd228348f416c2",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "volume",
      "rm",
      "wardby-storage-04e797cd228348f416c2",
    ],
    "options": undefined,
  },
]
`;

exports[`Docker launcher parity for runs without services > stops and removes with the same commands 1`] = `
[
  {
    "args": [
      "info",
      "--format",
      "{{json .}}",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "network",
      "create",
      "--driver",
      "bridge",
      "--internal",
      "--ipv6=false",
      "--opt",
      "com.docker.network.bridge.gateway_mode_ipv4=isolated",
      "--opt",
      "com.docker.network.bridge.gateway_mode_ipv6=isolated",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.run-id=docker-parity-stop",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "wardby-net-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "inspect",
      "wardby-net-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "volume",
      "create",
      "--driver",
      "local",
      "--opt",
      "type=tmpfs",
      "--opt",
      "device=tmpfs",
      "--opt",
      "o=size=512m,nr_inodes=131072,uid=10001,gid=10001,mode=0700,nosuid,nodev",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.run-id=docker-parity-stop",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "wardby-storage-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "volume",
      "inspect",
      "wardby-storage-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "create",
      "--name",
      "wardby-keeper-6c77a6ce5f0b97a41a28",
      "--pull",
      "never",
      "--user",
      "10001:10001",
      "--network",
      "none",
      "--read-only",
      "--cap-drop",
      "ALL",
      "--security-opt",
      "no-new-privileges=true",
      "--security-opt",
      "seccomp=builtin",
      "--cgroupns",
      "private",
      "--ipc",
      "none",
      "--cpus",
      "0.25",
      "--memory",
      "640m",
      "--memory-swap",
      "640m",
      "--memory-swappiness",
      "0",
      "--pids-limit",
      "32",
      "--restart",
      "no",
      "--log-driver",
      "local",
      "--log-opt",
      "max-size=1m",
      "--log-opt",
      "max-file=2",
      "--mount",
      "type=volume,src=wardby-storage-6c77a6ce5f0b97a41a28,dst=/run/wardby/storage,volume-nocopy",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--entrypoint",
      "node",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.run-id=docker-parity-stop",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "/opt/wardby/coding-worker/keeper.js",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-keeper-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "start",
      "wardby-keeper-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "logs",
      "--tail",
      "8",
      "wardby-keeper-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "connect",
      "--alias",
      "wardby-proxy",
      "wardby-net-6c77a6ce5f0b97a41a28",
      "trusted-proxy",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "trusted-proxy",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "create",
      "--name",
      "wardby-worker-6c77a6ce5f0b97a41a28",
      "--pull",
      "never",
      "--user",
      "10001:10001",
      "--network",
      "wardby-net-6c77a6ce5f0b97a41a28",
      "--read-only",
      "--cap-drop",
      "ALL",
      "--security-opt",
      "no-new-privileges=true",
      "--security-opt",
      "seccomp=builtin",
      "--init",
      "--cgroupns",
      "private",
      "--ipc",
      "none",
      "--cpus",
      "1.5",
      "--memory",
      "1024m",
      "--memory-swap",
      "1024m",
      "--memory-swappiness",
      "0",
      "--pids-limit",
      "64",
      "--shm-size",
      "16m",
      "--tmpfs",
      "/tmp:rw,noexec,nosuid,nodev,size=64m,mode=1777",
      "--tmpfs",
      "/home/wardby:rw,noexec,nosuid,nodev,size=64m,uid=10001,gid=10001,mode=0700",
      "--mount",
      "type=volume,src=wardby-storage-6c77a6ce5f0b97a41a28,dst=/workspace,volume-subpath=workspace,volume-nocopy",
      "--mount",
      "type=volume,src=wardby-storage-6c77a6ce5f0b97a41a28,dst=/run/wardby/input,volume-subpath=input,volume-nocopy,readonly",
      "--mount",
      "type=volume,src=wardby-storage-6c77a6ce5f0b97a41a28,dst=/run/wardby/output,volume-subpath=output,volume-nocopy",
      "--env",
      "WARDBY_PROXY_URL=http://wardby-proxy:8787",
      "--env",
      "WARDBY_RUN_CAPABILITY",
      "--restart",
      "no",
      "--stop-signal",
      "SIGTERM",
      "--stop-timeout",
      "10",
      "--log-driver",
      "local",
      "--log-opt",
      "max-size=1m",
      "--log-opt",
      "max-file=2",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.managed=true",
      "--label",
      "io.wardby.component=coding-worker",
      "--label",
      "io.wardby.run-sha256=6c77a6ce5f0b97a41a28cd2cfbd07c52edd7cc4e12024bb96f29eca4769b3c80",
      "--label",
      "io.wardby.run-id=docker-parity-stop",
      "--label",
      "io.wardby.job-id=<varies>",
      "--label",
      "io.wardby.spec-sha256=<varies>",
      "--label",
      "io.wardby.created-at=1970-01-01T00:00:01.000Z",
      "--label",
      "io.wardby.schema=1",
      "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    ],
    "options": {
      "env": {
        "WARDBY_RUN_CAPABILITY": "rrp_0123456789abcdef",
      },
    },
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-worker-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "start",
      "wardby-worker-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "stop",
      "--time",
      "10",
      "wardby-worker-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-worker-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "rm",
      "--force",
      "wardby-worker-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "disconnect",
      "wardby-net-6c77a6ce5f0b97a41a28",
      "trusted-proxy",
    ],
    "options": undefined,
  },
  {
    "args": [
      "container",
      "inspect",
      "wardby-keeper-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "container",
      "rm",
      "--force",
      "wardby-keeper-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "network",
      "inspect",
      "wardby-net-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "network",
      "rm",
      "wardby-net-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
  {
    "args": [
      "volume",
      "inspect",
      "wardby-storage-6c77a6ce5f0b97a41a28",
    ],
    "options": {
      "maxOutputBytes": 1048576,
    },
  },
  {
    "args": [
      "volume",
      "rm",
      "wardby-storage-6c77a6ce5f0b97a41a28",
    ],
    "options": undefined,
  },
]
`;
